# libCZI

./: CMakeLists.txt  libCZI.pro
Src/: CMakeLists.txt  Src.pro
Src/CZICmd/: CZICmd.pro
Src/JxrDecode/: JxrDecode.pro  targetver.h
Src/JxrDecode/Jxr/: JXRMeta.h  ansi.h  strcodec.h
Src/libCZI/: CziStructs.h  StreamImpl.cpp  StreamImpl.h  decoder_wic.cpp  decoder_wic.h  libCZI.h  libCZI.pri  libCZI.pro  libCZI_Lib.cpp  libCZI_Site.cpp  priv_guiddef.h  stdAllocator.cpp
